[project]
name = "ai-language-translator"
version = "0.1.0"
description = "Translate English text into multiple languages using Gemini AI and Streamlit."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "streamlit",
    "python-dotenv",
    "google-generativeai"
]

[tool.setuptools]
packages = ["."]
