[project]
name = "ai-language-translator"
version = "0.1.0"
description = "A Streamlit app to translate English text into various languages using Gemini AI."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlit",
    "google-generativeai",
    "dotenv>=0.9.9",
]

[tool.uv]
# Optional: speed up installs or configure caching
